update small description text

--- a/_pages/fieldwork.html
+++ b/_pages/fieldwork.html
@@ -5,8 +5,7 @@ permalink: /fieldwork
 ---
 
 <div class="content">
-  Some words. Off the field.
-  Science support, mountaineering, mix of different things
+  Field work, science support, mountaineering, and a mix of other outdoor activities that shape my research and who I am.
 </div>
 
 <div class="columns is-multiline is-centered is-vcentered">
