--- a/_pages/volunteering.html
+++ b/_pages/volunteering.html
@@ -1,11 +1,15 @@
 ---
 layout: page
-title: Volunteering
+title: Recent Volunteering
 permalink: /volunteering
 ---
 
 <div class="content">
-  Some words. Greenpeace etc.
+  Some of my recent volunteering activities are listed here. In my past I have been heavily engaged at Greenpeace, Extinction Rebellion, and terre des hommes.
+  Greenpeace shaped my idea of activism and influenced my teenage years significantly. 
+</div>
+<div class="content">
+  <b>I am still drawn to activism and consider it my Plan B if my research does turn out to be not impactful enough.</b>
 </div>
 
 <div class="columns is-multiline is-centered is-vcentered">
