update 404 not found page

--- a/_pages/404.html
+++ b/_pages/404.html
@@ -3,5 +3,11 @@ layout: page
 title: 404
 permalink: /404
 ---
+
+
 <p><strong>Page not found :(</strong></p>
-<p>The requested page could not be found.</p>
+<p>Don't worry - this time it wasn't climate change that melted away this page. Probably it simply vanished among my code base. 
+    Feel free to reach out to me if you cannot find a content that you would have expected here! Thank you for your help :)
+</p>
+
+<img align="left" width="800" style="vertical-align:middle;margin:0px 0px" src="../../assets/images/404.jpg" alt="Cute little snowperson that doesn't look particularly happy. Beautiful orange sun-set colors though.">
