update ml4cryo page

--- a/_pages/ml4cryo.html
+++ b/_pages/ml4cryo.html
@@ -10,11 +10,10 @@ permalink: /ml4cryo
   <!-- <h1 class="title is-size-4">Literature Collection Point</h2>
 
   <h2 class="title is-size-4">Internal Communication</h2> -->
-  <a href="https://github.com/liellnima/ml4cryo ">GitHub</a>: Collection of ML4Cryo literature. 
+  <a href="https://ml4cryo.github.io/">Website</a>: Check out our website for more information. 
   <br>
-  <a href="https://join.slack.com/t/ml4cryo/shared_invite/zt-2iz6mgjf4-iL3nqX3oOgahvc79deU4jA">Slack Space</a>: Not launched yet, but exists.
+  <a href="https://tinyurl.com/join-slack-ml4cryo">Slack Space</a>: Join to become an active part of the community.
   <br>
-  Mailing List: In Progress.
   <h1 class="title is-size-4">Venues</h3>
 </div>
 
